--- a/templates/Navbar.html
+++ b/templates/Navbar.html
@@ -38,6 +38,7 @@
 
                    href="{{ url_for('example_dataset') }}">Dataset</a></li>
             <li><a class="dropdown-item" href="{{ url_for('example_pipeline') }}">Pipeline</a></li>
+            <li><a class="dropdown-item" href="{{ url_for('userguide') }}">User guide</a></li>
           </ul>
         </li>
       </ul>
