--- a/templates/docs/Navbar.html
+++ b/templates/docs/Navbar.html
@@ -36,6 +36,9 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/home/example_dataset">Dataset</a></li>
             <li><a class="dropdown-item" href="/home/example_pipeline">Pipeline</a></li>
+            <li><a class="dropdown-item" href="/home/userguide">User guide</a></li>
+
+
           </ul>
         </li>
 
