--- a/templates/docs/index.html
+++ b/templates/docs/index.html
@@ -56,7 +56,7 @@
         </p>
 
 
-        <a href="https://iseedeurope.eu/about/" class=" btn btn-success bg-success  border border-white">Read more about ISEED</a>
+        <a href="https://iseedeurope.eu/about/" target="_blank" class=" btn btn-success bg-success  border border-white">Read more about ISEED</a>
 
       </div>
     </div>
@@ -91,7 +91,7 @@
   
   <div class="row border-white m-2">
     <div class="col m-1">
-      <div class="card text-dark border-white">
+      <div class="card  w-75 text-dark border-white">
         <div class="card-body">
           <div class="card-title"><h3>The Pipeline</h3></div>
           <p class="card-text" style="text-align:justify">
@@ -112,8 +112,19 @@
       </div>
    
     </div>
+<!--<div class="row" >
+   <div class="col m-2">
+      <div class="card d-flex align-items-center text-dark card-body border-white">
+        <div class="card-title"><h3>Demo</h3></div>
+        <div class="embed-responsive embed-responsive-21by9">
+      <iframe width="640" height="480"
+src="https://www.youtube.com/embed/Try-izE6nvk">
+</iframe>
+      </div>
+      </div>
+    </div>
+</div>-->
 
-  
     </div>
   </div>
 
